# Tetris

./: .gitignore  README.md  pyproject.toml
src/kezmenu/: __init__.py
src/tetris/: __main__.py  scores.py
src/tetris/resources/: README.md
